Add code to compute receiver outputs from the BM shares
Add the static method 'DelayedPayoutTxReceiverService::computeReceivers'
to produce a list of 'ReceiverAddressAndAmount' protos from the provided
burningman share list, available millisatoshis to spend and target fee
rate in sat/kwu, which has been sorted by descending output amount and
with any tiny/uneconomical outputs filtered out. (Millisatoshi precision
is needed internally to attain an exact fee rate in sats per kwu, since
[sat/kwu] * [wu] == [msat].)

Replace the mock receiver amounts in 'PartialSignaturesRequestUtil' with
mock shares and use the above method to produce the final list of
'ReceiverAddressAndAmount' protos to pass to the Rust server, passing in
the 'redirectionAmountMsat' quantity picked up in the prior RPC call.
This prevents any wrong-redirection-total warnings/errors on the Rust
side, which will eventually become hard errors.